--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -109,8 +109,6 @@
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "sass": "^1.54.8",
-    "sass-lint": "^1.13.1",
-    "sass-lint-webpack": "^1.0.4",
     "sass-loader": "^10.2.0",
     "simulate-event": "^1.4.0",
     "sourcemapped-stacktrace": "^1.1.11",
@@ -119,6 +117,7 @@
     "style-loader": "^2.0.0",
     "stylelint": "^14.11.0",
     "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-webpack-plugin": "^2.4.0",
     "thread-loader": "^3.0.4",
     "ts-loader": "^8.3.0",
     "ts-node": "^10.9.1",
@@ -133,12 +132,6 @@
   },
   "resolutions": {
     "**/chokidar/**/glob-parent": ">=6.0.2",
-    "html-webpack-plugin/**/ansi-regex": "^5.0.1",
-    "sass-lint/**/ansi-regex": "^5.0.1",
-    "sass-lint/**/ajv": "^6.12.3",
-    "sass-lint/**/jsonpointer": ">=5.0.0",
-    "sass-lint/**/merge": ">=2.1.1",
-    "sass-lint/**/minimist": ">=1.2.5",
-    "sass-lint/**/shelljs": ">=0.8.5"
+    "html-webpack-plugin/**/ansi-regex": "^5.0.1"
   }
 }
