Upgrade from Sprockets 3 to Sprockets 4
Sprockets 4 introduces need for mandatory app/assets/config/manifest.js (which is not actually JS) that replaces the old assets.precompile block. By default everything in the root of the load paths (app/assets/stylesheets etc) seems to be treated as an entry point which is not what we want, so continue to list out the individual entry points we need.

https://github.com/rails/sprockets/blob/main/UPGRADING.md

This
- removes a whole lot of dead entrypoints for stylesheets migrated properly to webpack land
- changes image loading to not just include ANY image in the load path (it's not possible like it was before anyway, it seems) and only include those referenced. This doesn't seem to have any effect.
- only includes woff/woff2 versions of fonts based on their inclusion. The others aren't required anyway it seems?

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -686,15 +686,26 @@ task configureWar {
       into '/'
       exclude('WEB-INF/web.xml')
       exclude("**/rails/.tool-versions")
+
+      // Unrelated Rails/Ruby stuff
       exclude("**/rails/*.log")
       exclude("**/rails/log/")
       exclude("**/rails/logs/")
-      exclude("**/rails/node_modules/")
       exclude("**/rails/spec/")
       exclude("**/rails/tmp/")
-      exclude("**/rails/app/assets/")
+
+      // Vendored pieces that are compiled and incorporated into `public` as necessary by Rails/Sprockets or Webpack
+      exclude("**/rails/node_modules/")
+      exclude("**/rails/node-vendor/")
+      exclude("**/rails/vendor/")
+
+      // Rails/Sprockets-compiled or Webpacked assets
+      exclude("**/rails/app/assets/images/")
+      exclude("**/rails/app/assets/javascripts/")
+      exclude("**/rails/app/assets/*stylesheets/")
       exclude("**/rails/webpack/")
 
+      // Unnecessary Gems and related cruft
       exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/bin/")
       exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/bundler/")
       exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/cache/")
