--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   api project.deps.semanticVersion
   compileOnly project.deps.jetBrainsAnnotations
   testImplementation project(path: ':config:config-api', configuration: 'testOutput')
+  testImplementation project.deps.jsonUnit
   testImplementation project(':test:test-utils')
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
