Comment as to why we have Jitpack repo in a few projects

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -19,7 +19,7 @@ import com.thoughtworks.go.build.VerifyJarTask
 description = 'GoCD Agent'
 
 repositories {
-  maven { url 'https://jitpack.io' }
+  maven { url 'https://jitpack.io' } // Needed for spring-test-junit5
 }
 
 sourceSets {
