--- a/plugin-infra/go-plugin-infra/build.gradle
+++ b/plugin-infra/go-plugin-infra/build.gradle
@@ -17,7 +17,7 @@
 description = 'GoCD Plugin Infrastructure'
 
 repositories {
-  maven { url 'https://jitpack.io' }
+  maven { url 'https://jitpack.io' } // Needed for spring-test-junit5
 }
 
 dependencies {
