Remove copy+paste Spring mocks
Replaces with use of the included ones in Spring Test

--- a/test/http-mocks/build.gradle
+++ b/test/http-mocks/build.gradle
@@ -15,12 +15,12 @@
  */
 
 dependencies {
+  implementation project.deps.apacheHttpComponents
   implementation project.deps.assertJ
   implementation project.deps.commonsLang3
   implementation project.deps.servletApi
   implementation project.deps.gson
-  implementation project.deps.apacheHttpMime
   implementation project.deps.spring
-  implementation project.deps.springWeb
+  implementation project.deps.springTest
   implementation project.deps.jsonUnit
 }
