--- a/build.gradle
+++ b/build.gradle
@@ -167,7 +167,7 @@ project.ext.toolchains = [
 ]
 
 project.ext.packaging = [
-  adoptiumJdkVersion: new AdoptiumVersion(
+  adoptiumJavaVersion: new AdoptiumVersion(
     feature: 17,
     interim: 0, // set to `null` for the first release of a new featureVersion
     update : 4, // set to `null` for the first release of a new featureVersion
