--- a/installers/generic.gradle
+++ b/installers/generic.gradle
@@ -1,7 +1,3 @@
-import com.thoughtworks.go.build.InstallerType
-import org.apache.tools.ant.filters.ConcatFilter
-import org.apache.tools.ant.filters.FixCrLfFilter
-
 /*
  * Copyright 2022 Thoughtworks, Inc.
  *
@@ -17,6 +13,11 @@ import org.apache.tools.ant.filters.FixCrLfFilter
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+import com.thoughtworks.go.build.InstallerMetadataTask
+import com.thoughtworks.go.build.InstallerType
+import org.apache.tools.ant.filters.ConcatFilter
+import org.apache.tools.ant.filters.FixCrLfFilter
 
 task agentGenericZip(type: Zip) { Zip thisTask ->
   configureGenericZip(thisTask, InstallerType.agent)
@@ -239,4 +240,10 @@ def configureGenericZip(Zip zipTask, InstallerType installerType) {
       rename ".*", ".ignore"
     }
   }
+
+  zipTask.finalizedBy(project.tasks.create("${zipTask.name}Metadata", InstallerMetadataTask.class) {
+    architecture = com.thoughtworks.go.build.Architecture.all
+    packageTask = zipTask
+    type = installerType
+  })
 }
