--- a/installers/linux.gradle
+++ b/installers/linux.gradle
@@ -14,15 +14,17 @@
  * limitations under the License.
  */
 
+import com.thoughtworks.go.build.Architecture
 import com.thoughtworks.go.build.DownloadFile
+import com.thoughtworks.go.build.InstallerMetadataTask
 import com.thoughtworks.go.build.InstallerType
 import groovy.json.JsonOutput
 import org.apache.commons.codec.digest.DigestUtils
 import org.apache.tools.ant.filters.ConcatFilter
 
-enum OsType {
+enum PackageType {
 
-  deb{
+  deb {
     List<String> configureFpm(Project project, File buildRoot, InstallerType installerType) {
       List<String> fpmArgs = []
       fpmArgs += ['-t', 'deb']
@@ -54,7 +56,7 @@ enum OsType {
       return fpmArgs
     }
   },
-  rpm{
+  rpm {
     List<String> configureFpm(Project project, File buildRoot, InstallerType installerType) {
       List<String> fpmArgs = []
 
@@ -103,22 +105,23 @@ private File destFile(String url) {
 }
 
 task downloadLinuxJreChecksum(type: DownloadFile) {
-  src project.packaging.adoptiumJdkVersion.toSha256SumURLFor(com.thoughtworks.go.build.OperatingSystem.linux)
+  src project.packaging.adoptiumJavaVersion.toSha256SumURLFor(com.thoughtworks.go.build.OperatingSystem.linux)
   dest destFile(src.toString())
 }
 
 task downloadLinuxJre(type: DownloadFile) {
   dependsOn downloadLinuxJreChecksum
-  src project.packaging.adoptiumJdkVersion.toDownloadURLFor(com.thoughtworks.go.build.OperatingSystem.linux)
+  src project.packaging.adoptiumJavaVersion.toDownloadURLFor(com.thoughtworks.go.build.OperatingSystem.linux)
   dest destFile(src.toString())
   checksum = { downloadLinuxJreChecksum.outputs.files.singleFile.getText("utf-8").trim().split(" ").first() }
 }
 
-def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, OsType osType, File buildRoot, Configuration configuration, File destDir) {
+def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, PackageType packageType, File buildRoot, Configuration configuration, File destDir) {
   packageTask.with {
     dependsOn configuration
     dependsOn downloadLinuxJre
     dependsOn extractDeltaPack
+    outputs.dir(destDir)
 
     doFirst {
       project.delete(buildRoot)
@@ -314,9 +317,9 @@ def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, 
         List<String> cmd = []
         cmd += ['fpm']
 
-        cmd += ['--debug']
-//  cmd += ['-e']
-//  cmd += ['--debug-workspace']
+//        cmd += ['--debug']
+//        cmd += ['-e']
+//        cmd += ['--debug-workspace']
         cmd += ['--conflicts', installerType.baseName.replaceFirst(/^go-/, 'cruise-')]
         cmd += ['--replaces', installerType.baseName.replaceFirst(/^go-/, 'cruise-')]
         cmd += ['--force']
@@ -333,10 +336,10 @@ def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, 
         cmd += ['--maintainer', 'Thoughtworks, Inc.']
         cmd += ['--url', 'https://gocd.org']
         cmd += ['--before-install', project.file('linux/shared/before-install.sh.erb').path]
-        cmd += ['--before-upgrade', project.file("linux/${osType}/before-upgrade.sh.erb").path]
-        cmd += ['--after-upgrade', project.file("linux/${osType}/after-upgrade.sh.erb").path]
-        cmd += ['--after-install', project.file("linux/${osType}/after-install.sh.erb").path]
-        cmd += ['--before-remove', project.file("linux/${osType}/before-remove.sh.erb").path]
+        cmd += ['--before-upgrade', project.file("linux/${packageType}/before-upgrade.sh.erb").path]
+        cmd += ['--after-upgrade', project.file("linux/${packageType}/after-upgrade.sh.erb").path]
+        cmd += ['--after-install', project.file("linux/${packageType}/after-install.sh.erb").path]
+        cmd += ['--before-remove', project.file("linux/${packageType}/before-remove.sh.erb").path]
         cmd += ['--rpm-posttrans', project.file("linux/rpm/post-tran.sh.erb").path]
         cmd += ['--template-value', "install_scripts_dir=${project.file('linux').path}"]
         cmd += ['--template-scripts']
@@ -353,18 +356,23 @@ def configureLinuxPackage(DefaultTask packageTask, InstallerType installerType, 
           }
         }
 
-        cmd += osType.configureFpm(project, buildRoot, installerType)
+        cmd += packageType.configureFpm(project, buildRoot, installerType)
 
         commandLine = cmd
 
-        workingDir "${project.buildDir}/distributions/${osType}"
+        workingDir "${project.buildDir}/distributions/${packageType}"
 
         standardOutput = System.out
         errorOutput = System.err
       }
-
     }
   }
+
+  packageTask.finalizedBy(project.tasks.create("${packageTask.name}Metadata", InstallerMetadataTask.class) {
+    architecture = Architecture.all
+    it.packageTask = packageTask
+    type = installerType
+  })
 }
 
 def copyMultipleAgentsReadme(DefaultTask packageTask, File buildRoot, InstallerType installerType) {
@@ -378,42 +386,41 @@ def copyMultipleAgentsReadme(DefaultTask packageTask, File buildRoot, InstallerT
 
 task agentPackageRpm { DefaultTask thisTask ->
   def installerType = InstallerType.agent
-  def osType = OsType.rpm
-  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${osType.toString()}/BUILD_ROOT")
-  def destDir = project.file("${project.buildDir}/distributions/${osType}")
+  def packageType = PackageType.rpm
+  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${packageType.toString()}/BUILD_ROOT")
+  def destDir = project.file("${project.buildDir}/distributions/${packageType}")
 
   copyMultipleAgentsReadme(thisTask, buildRoot, installerType)
-  configureLinuxPackage(thisTask, installerType, osType, buildRoot, configurations.agentBootstrapperJar, destDir)
-
+  configureLinuxPackage(thisTask, installerType, packageType, buildRoot, configurations.agentBootstrapperJar, destDir)
 }
 
 
 task agentPackageDeb { DefaultTask thisTask ->
   def installerType = InstallerType.agent
-  def osType = OsType.deb
-  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${osType.toString()}/BUILD_ROOT")
-  def destDir = project.file("${project.buildDir}/distributions/${osType}")
+  def packageType = PackageType.deb
+  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${packageType.toString()}/BUILD_ROOT")
+  def destDir = project.file("${project.buildDir}/distributions/${packageType}")
 
   copyMultipleAgentsReadme(thisTask, buildRoot, installerType)
-  configureLinuxPackage(thisTask, installerType, osType, buildRoot, configurations.agentBootstrapperJar, destDir)
+  configureLinuxPackage(thisTask, installerType, packageType, buildRoot, configurations.agentBootstrapperJar, destDir)
 }
 
 task serverPackageRpm { DefaultTask thisTask ->
   def installerType = InstallerType.server
-  def osType = OsType.rpm
-  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${osType.toString()}/BUILD_ROOT")
-  def destDir = project.file("${project.buildDir}/distributions/${osType}")
+  def packageType = PackageType.rpm
+  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${packageType.toString()}/BUILD_ROOT")
+  def destDir = project.file("${project.buildDir}/distributions/${packageType}")
 
-  configureLinuxPackage(thisTask, installerType, osType, buildRoot, configurations.serverJar, destDir)
+  configureLinuxPackage(thisTask, installerType, packageType, buildRoot, configurations.serverJar, destDir)
 }
 
 task serverPackageDeb { DefaultTask thisTask ->
   def installerType = InstallerType.server
-  def osType = OsType.deb
-  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${osType.toString()}/BUILD_ROOT")
-  def destDir = project.file("${project.buildDir}/distributions/${osType}")
+  def packageType = PackageType.deb
+  def buildRoot = project.file("${project.buildDir.path}/${installerType.baseName}/${packageType.toString()}/BUILD_ROOT")
+  def destDir = project.file("${project.buildDir}/distributions/${packageType}")
 
-  configureLinuxPackage(thisTask, installerType, osType, buildRoot, configurations.serverJar, destDir)
+  configureLinuxPackage(thisTask, installerType, packageType, buildRoot, configurations.serverJar, destDir)
 }
 
 assemble.dependsOn(":installers:agentPackageRpm", ":installers:serverPackageRpm", ":installers:agentPackageDeb", ":installers:serverPackageDeb")
