Temporarily override jackson versions to reflect micro-patch BOM usage
Can/should be reverted on upgrade to 2.13.5 or 2.14.0

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -162,9 +162,9 @@ task verifyJar(type: VerifyJarTask) {
       "httpmime-${project.versions.apacheHttpComponents}.jar",
       "istack-commons-runtime-4.1.1.jar",
       "j2objc-annotations-1.3.jar",
-      "jackson-annotations-${project.versions.jacksonBom}.jar",
-      "jackson-core-${project.versions.jacksonBom}.jar",
-      "jackson-databind-${project.versions.jacksonBom}.jar",
+      "jackson-annotations-2.13.4.jar",
+      "jackson-core-2.13.4.jar",
+      "jackson-databind-2.13.4.1.jar",
       "jakarta.activation-api-2.1.0.jar",
       "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
       "jakarta.servlet-api-${project.versions.servletApi}.jar",
