--- a/server/build.gradle
+++ b/server/build.gradle
@@ -300,7 +300,8 @@ dependencies {
   providedAtPackageTime project.deps.jettyWebsocket
 
   testImplementation(project.deps.dbunit) {
-    exclude(group: 'postgresql')
+    exclude(group: 'org.postgresql')
+    exclude(group: 'com.oracle.database.jdbc')
   }
   testImplementation project(path: ':common', configuration: 'testOutput')
   testImplementation project(path: ':config:config-server', configuration: 'testOutput')
