Workaround issues with NodeJS 17+ on Webpack4
This is due to change to openssl3 by default, and won't be addressed on older Webpack versions. Should be removed on Webpack upgrade.

--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "license": "Apache-2.0",
   "scripts": {
-    "webpack-watch": "webpack --config webpack/config/webpack.config.ts --color --mode=development --watch",
-    "webpack-dev": "webpack --config webpack/config/webpack.config.ts --color --mode=development",
-    "webpack-prod": "webpack --config webpack/config/webpack.config.ts --color --mode=production",
+    "webpack-watch": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=development --watch",
+    "webpack-dev": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=development",
+    "webpack-prod": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=production",
     "jasmine-ci": "karma start --single-run",
     "jasmine-server": "karma start",
     "jasmine-old-ci": "jasmine-browser-runner runSpecs --config=spec/javascripts/support/jasmine-browser.js",
