--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "license": "Apache-2.0",
   "scripts": {
-    "webpack-watch": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=development --watch",
-    "webpack-dev": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=development",
-    "webpack-prod": "NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=production",
+    "webpack-watch": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=development --watch",
+    "webpack-dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=development",
+    "webpack-prod": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack/config/webpack.config.ts --color --mode=production",
     "jasmine-ci": "karma start --single-run",
     "jasmine-server": "karma start",
     "jasmine-old-ci": "jasmine-browser-runner runSpecs --config=spec/javascripts/support/jasmine-browser.js",
@@ -77,6 +77,7 @@
     "babel-loader": "^8.2.5",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.7",
     "eslint": "^8.26.0",
     "eslint-plugin-es5": "^1.5.0",
