Force-upgrade cache-loader to loader-utils 2
I think this should be OK, and loader-utils 1 is ancient and has prototype pollution noise from scans.

--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -132,6 +132,7 @@
   },
   "resolutions": {
     "**/chokidar/**/glob-parent": ">=6.0.2",
-    "html-webpack-plugin/**/ansi-regex": "^5.0.1"
+    "html-webpack-plugin/**/ansi-regex": "^5.0.1",
+    "**/loader-utils": "^2.0.3"
   }
 }
