--- a/build.gradle
+++ b/build.gradle
@@ -503,6 +503,7 @@ subprojects {
 
   tasks.withType(GroovyCompile).configureEach {
     options.incremental = true
+    options.incrementalAfterFailure = true
   }
 
   tasks.withType(JavaCompile) { compileTask ->
