Simplify Yarn tasks, removing incremental processing
- Removes caching from yarn install. node_modules is HUGE. Caching it took longer than just re-running the install and trusting yarn to manage it
- Forcing clean installs for Yarn is something that only seemed to be needed in the early days of Yarn. Seems unnecessary now
- Incremental processing seemed irrelevant here, we need to run a task or do a yarn install, we don't do it "partially" for files
- Fixes environment paths for yarn run tasks. Propagating the entire env was causing unnecessary re-runs, because there are vars in it which are irrelevant, but change each run.

--- a/server/jasmine.gradle
+++ b/server/jasmine.gradle
@@ -166,8 +166,8 @@ task jasmineOld(type: YarnRunTask) {
   yarnCommand = ['jasmine-old-ci']
 
   doFirst {
-    environment['PATH'] = ([ driverImpl().ext.outputDir ] + environment['PATH']).join(File.pathSeparator)
-    browserExecutable(environment['PATH'])
+    environmentPath = ([ driverImpl().ext.outputDir ] + environmentPath).join(File.pathSeparator)
+    browserExecutable(environmentPath)
   }
 }
 
@@ -196,7 +196,7 @@ task jasmineOldServer(type: YarnRunTask) {
   yarnCommand = ['jasmine-old-server']
 
   doFirst {
-    environment['PATH'] = ([ driverImpl().ext.outputDir ] + environment['PATH']).join(File.pathSeparator)
-    browserExecutable(environment['PATH'])
+    environmentPath = ([ driverImpl().ext.outputDir ] + environmentPath).join(File.pathSeparator)
+    browserExecutable(environmentPath)
   }
 }
