--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -58,7 +58,7 @@ final Map<String, String> libraries = [
   httpClientMock      : 'com.github.paweladamski:HttpClientMock:1.10.0',
   jacksonBom          : 'com.fasterxml.jackson:jackson-bom:2.14.0',
   jakartaAnnotation   : 'jakarta.annotation:jakarta.annotation-api:1.3.5',
-  javaAssist          : 'javassist:javassist:3.12.1.GA',
+  javassist           : 'javassist:javassist:3.12.1.GA',
   jaxbBom             : 'org.glassfish.jaxb:jaxb-bom:4.0.1',
   jaxen               : 'jaxen:jaxen:1.2.0',
   jcommander          : 'com.beust:jcommander:1.82',
@@ -130,7 +130,7 @@ final Map<String, String> v = [
   hamcrest            : versionOf(libraries.hamcrest),
   hibernate           : versionOf(libraries.hibernate),
   jacksonBom          : versionOf(libraries.jacksonBom),
-  javaAssist          : versionOf(libraries.javaAssist),
+  javassist           : versionOf(libraries.javassist),
   jakartaAnnotation   : versionOf(libraries.jakartaAnnotation),
   jaxb                : versionOf(libraries.jaxbBom),
   jaxen               : versionOf(libraries.jaxen),
