Revert "Remove unused commons-fileupload"
This reverts commit adbc2486

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -280,6 +280,10 @@ dependencies {
     exclude(group: 'org.springframework')
   }
   implementation(project.deps.springSecurity)
+  if (project.deps.springWeb) {
+    // used by CommonsMultipartResolver
+    implementation project.deps.commonsFileUpload
+  }
   implementation project.deps.aspectj
   implementation project.deps.aspectjWeaver
   implementation project.deps.urlrewrite
@@ -815,6 +819,7 @@ task verifyWar(type: VerifyJarTask) {
         "commons-collections-${project.versions.commonsCollections}.jar",
         "commons-collections4-${project.versions.commonsCollections4}.jar",
         "commons-dbcp2-${project.versions.commonsDbcp}.jar",
+        "commons-fileupload-${project.versions.commonsFileUpload}.jar",
         "commons-io-${project.versions.commonsIO}.jar",
         "commons-lang3-${project.versions.commonsLang3}.jar",
         "commons-text-${project.versions.commonsText}.jar",
