Improve liquibase logging via SLF4J
- Avoid logging to stdout/console directly
- Ensure logging goes to SLF4J correctly

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -74,6 +74,7 @@ final Map<String, String> libraries = [
   jsoup               : 'org.jsoup:jsoup:1.15.3',
   junit5Bom           : 'org.junit:junit-bom:5.9.1',
   liquibase           : 'org.liquibase:liquibase-core:4.18.0',
+  liquibaseSlf4j      : 'com.mattbertolini:liquibase-slf4j:4.1.0',
   logback             : 'ch.qos.logback:logback-classic:1.2.11',
   lombok              : 'org.projectlombok:lombok:1.18.24',
   mail                : 'jakarta.mail:jakarta.mail-api:2.1.0',
@@ -144,6 +145,7 @@ final Map<String, String> v = [
   jolt                : versionOf(libraries.jolt),
   jruby               : versionOf(libraries.jruby),
   liquibase           : versionOf(libraries.liquibase),
+  liquibaseSlf4j      : versionOf(libraries.liquibaseSlf4j),
   logback             : versionOf(libraries.logback),
   mail                : versionOf(libraries.mail),
   mailSmtp            : versionOf(libraries.mailSmtp),
