--- a/db-support/db-migration/build.gradle
+++ b/db-support/db-migration/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     exclude group: 'org.yaml', module: 'snakeyaml'
     exclude group: 'com.opencsv', module: 'opencsv'
   }
+  runtimeOnly project.deps.liquibaseSlf4j
 
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
