Add direct sprockets dependency for forward compat with Rails 7

--- a/server/src/main/webapp/WEB-INF/rails/Gemfile
+++ b/server/src/main/webapp/WEB-INF/rails/Gemfile
@@ -3,6 +3,7 @@ ruby '3.1.0'
 
 platforms :jruby do
   gem 'rails'
+  gem 'sprockets-rails'
 
   # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
   gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
