Remove need for Apache Ant within base and agent-launcher

--- a/agent-bootstrapper/build.gradle
+++ b/agent-bootstrapper/build.gradle
@@ -44,7 +44,7 @@ task fatJar(type: Jar) {
     attributes 'GoCD-Main-Class': 'com.thoughtworks.go.agent.bootstrapper.AgentBootstrapper'
   }
 
-  from(configurations.compileClasspath + jar.archiveFile) { into "lib/" }
+  from(configurations.runtimeClasspath + jar.archiveFile) { into "lib/" }
 
   from(configurations.packagingOnly) {
     into "defaultFiles/"
@@ -65,7 +65,6 @@ task verifyJar(type: VerifyJarTask) {
     'lib'         : [
       "agent-bootstrapper-${project.version}-classes.jar",
       "agent-common-${project.version}.jar",
-      "ant-${project.versions.apacheAnt}.jar",
       "base-${project.version}.jar",
       "commons-codec-${project.versions.commonsCodec}.jar",
       "commons-io-${project.versions.commonsIO}.jar",
