--- a/db-support/db-migration/build.gradle
+++ b/db-support/db-migration/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     exclude group: 'org.yaml', module: 'snakeyaml'
     exclude group: 'com.opencsv', module: 'opencsv'
   }
+  implementation project.deps.slf4j
+  runtimeOnly project.deps.logback
   runtimeOnly project.deps.liquibaseSlf4j
 
   testImplementation project.deps.junit5Api
